[metadata]
name = zenoss
version = file: package_version
maintainer = Zenoss, Inc.
maintainer_email = dev@zenoss.com
url = https://www.zenoss.com
description = Zenoss Platform
long_description = file: README.md
license = Commercial

[options]
zip_safe = False
packages = find:
package_dir =
	=src
include_package_data = True
namespace_packages =
	Products
	zenoss
python_requires = >=2.7,<3
scripts =
	bin/addSystemUser.py
	bin/adjustSchedulesForDST.py
	bin/create_sample_config.sh
	bin/dumpstats
	bin/exportxml
	bin/monitored-datapoints
	bin/rasterize.js
	bin/rebuildjs
	bin/runtests
	bin/runtests.py
	bin/service-migrate.py
	bin/zencheckzopes
	bin/zencommand
	bin/zeneventd
	bin/zenfunctions
	bin/zenglobalconf
	bin/zenhub
	bin/zenhubworker
	bin/zenlockout
	bin/zenlockout.py
	bin/zenmail
	bin/zenmigrate
	bin/zenmodeler
	bin/zenossdbpack
	bin/zenpack_batch
	bin/zenpack_install
	bin/zenpass
	bin/zenperfsnmp
	bin/zenping
	bin/zenpop3
	bin/zenprocess
	bin/zenq
	bin/zenrun
	bin/zensendevent
	bin/zensyslog
	bin/zentestcommand
	bin/zentestds
	bin/zentrap
	bin/zenupgrade
	bin/zipzenpack
	bin/zpasswd.py
	bin/zsupervisor

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	configcache = Products.ZenCollector.configcache.__main__:main
	dcsh = Products.ZenUtils.RunCommand:main
	model_catalog_init = Products.Zuul.catalog.model_catalog_init:main
	reportloader = Products.ZenReports.ReportLoader:main
	reportmail = Products.ZenReports.ReportMail:main
	zenackevents = Products.ZenEvents.zenackevents:main
	zenbackdump = Products.ZenModel.BatchDeviceDumper:main
	zenchkrels = Products.ZenUtils.CheckRelations:main
	zenchkschema = Products.ZenRelations.checkrel:main
	zencyberark = Products.ZenCollector.zencyberark:main
	zendb = Products.ZenUtils.ZenDB:main
	zendmd = Products.ZenModel.zendmd:main
	zenjobs = Products.Jobber.bin:main
	zendump = Products.ZenRelations.ExportRM:main
	zenload = Products.ZenRelations.ImportRM:main
	zenmib = Products.ZenModel.zenmib:main
	zenpack = Products.ZenUtils.zenpack:main
	zenpackdaemons = Products.ZenUtils.ZenPackDaemons:main
	zenschemadoc = Products.ZenRelations.schemadoc:main
	zproprmlocal = Products.ZenUtils.zproprmlocal:main
celery.commands =
   monitor = Products.Jobber.monitor:MonitorCommand
